# FRIDAY

./: README.md  agent_friday.py  pyproject.toml  run_friday_hidden.vbs
friday/tools/: system.py  web.py
